--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rincron_mini"
-version = "0.2.0-beta"
+version = "0.3.0-rc1"
 edition = "2021"
 authors = ["Camille Nevermind"]
 readme = "README.md"
